fixes + images in overview

--- a/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
+++ b/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
@@ -38,10 +38,26 @@ You can open the CSV in any spreadsheet tool to review and filter the activity a
 ## Stream Logs to External Services
 
 In addition to exporting logs as CSV files, you can stream logs in real-time to external log management services for centralized monitoring, analysis, and long-term storage.
-
 ### Available Integrations
 
 - **[Datadog](/cloud/integrations/log-streaming/datadog)** - Stream logs to Datadog for centralized log management, monitoring, and alerting
+- **[Splunk](/cloud/integrations/log-streaming/splunk)** - Stream logs to Splunk via HTTP Event Collector (HEC) for centralized log management and analysis
 - **[Google Cloud Storage (GCS)](/cloud/integrations/log-streaming/gcs)** - Stream logs to GCS buckets for long-term storage and integration with BigQuery and other Google Cloud services
 
-Configure log streaming from the Logs page by clicking **Configure Log Streaming** or the **Settings** icon, then select your preferred destination.
+Configure log streaming from the Logs page by clicking the **Connect** icon, then select your preferred destination.
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1767005466/Pasted_Graphic_ujaoud.png"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1768276962/b3d70f5a-88c7-4c6d-a0e6-ff56d392b901.png"
+    />
+  </div>
+</Frame>
