--- a/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
@@ -4,6 +4,7 @@ import BiCards from '/snippets/cloud/integrations/cards-groups/bi-cards.mdx';
 import ReverseEtlCards from '/snippets/cloud/integrations/cards-groups/reverse-etl-cards.mdx';
 import CodeRepoCards from '/snippets/cloud/integrations/cards-groups/code-repo-cards.mdx';
 import AlertsDestinationCards from '/snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx';
+import LogStreamingCards from '/snippets/cloud/integrations/cards-groups/log-streaming-cards.mdx';
 import GovernanceCards from '/snippets/cloud/integrations/cards-groups/governance-cards.mdx';
 import MetadataLayerCards from '/snippets/cloud/integrations/cards-groups/metadata-layer-cards.mdx';
 
@@ -30,6 +31,10 @@ import MetadataLayerCards from '/snippets/cloud/integrations/cards-groups/metada
 ### Alerts & incidents
 
 <AlertsDestinationCards />
+
+### Log Streaming
+
+<LogStreamingCards />
 
 ### Governance
 
