--- a/docs/cloud/integrations/log-streaming/gcs.mdx
+++ b/docs/cloud/integrations/log-streaming/gcs.mdx
@@ -26,6 +26,8 @@ Before configuring log streaming to GCS, you'll need:
    - Required role: `Storage Object User` (roles/storage.objectUser)
    - You'll need to generate a service account JSON key file
    - The service account key file must be uploaded in Elementary
+   - **Workload Identity Federation**: Support for Workload Identity Federation with BigQuery service accounts is coming soon
+
 
 ## Configuring Log Streaming to GCS
 
