--- a/docs/snippets/cloud/integrations/bigquery.mdx
+++ b/docs/snippets/cloud/integrations/bigquery.mdx
@@ -16,5 +16,6 @@ Provide the following fields:
 - **Project**: The name of your BigQuery project.
 - **Elementary dataset**: The name of your Elementary dataset. Usually `[dataset name]_elementary`.
 - **Location**: Use this field to configure the location of BigQuery datasets as per [the BigQuery documentation](https://cloud.google.com/bigquery/docs/locations).
+- **Workload Identity Federation**: Support for Workload Identity Federation with BigQuery service accounts is coming soon
 
 <IpAllowlist />
