--- a/docs/cloud/general/security-and-privacy.mdx
+++ b/docs/cloud/general/security-and-privacy.mdx
@@ -88,7 +88,7 @@ As mentioned above, Elementary generally avoids storing raw data and relies on h
 That being said, one feature (that is opt-out) that may contain such data is storage of sample rows for failed tests in your pipeline.
 
 For customers that require it, Elementary has the option to store such information in the US, instead of the EU which is the default. 
-In this case, the data will specifically be stored in S3 buckets in the eu-east-1 (Virginia) AWS region, instead of eu-central-1 (Frankfurt).
+In this case, the data will specifically be stored in S3 buckets in the us-east-1 (Virginia) AWS region, instead of eu-central-1 (Frankfurt).
 
 The relevant datasets that will be stored in the US are:
 1. The S3 bucket that contains the samples served by the Elementary UI.
