--- a/docs/cloud/integrations/log-streaming/splunk.mdx
+++ b/docs/cloud/integrations/log-streaming/splunk.mdx
@@ -47,6 +47,14 @@ Before configuring log streaming to Splunk, you'll need:
 
 5. Click **Save** to enable log streaming
 
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1768306580/image_30_rtpr1b.png"
+    />
+  </div>
+</Frame>
+
 <Note>
 The log streaming configuration applies to your entire workspace. Both user activity logs and system logs will be streamed to Splunk in batches.
 </Note>
