Update install dbt package page with multi-project notes and improved messaging

--- a/docs/cloud/onboarding/quickstart-dbt-package.mdx
+++ b/docs/cloud/onboarding/quickstart-dbt-package.mdx
@@ -13,4 +13,5 @@ import QuickstartPackageInstall from '/snippets/quickstart-package-install.mdx';
 ## What's next?
 
 - [Connect your data warehouse](/cloud/onboarding/connect-data-warehouse)
+- Connect multi dbt projects to your environment. [Learn more here](/cloud/features/multi-env)
 - [invite team members](/cloud/manage-team) to join!
