--- a/docs/cloud/integrations/log-streaming/splunk.mdx
+++ b/docs/cloud/integrations/log-streaming/splunk.mdx
@@ -129,6 +129,16 @@ Each system log entry includes:
 - `env_name`: Environment name (empty string for account-level actions)
 - `data`: Additional context-specific information as a JSON object
 
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      height ="400"
+      width="400"
+      src="https://res.cloudinary.com/dvmtceykh/image/upload/v1768313492/image_33_vdtuz1.png"
+    />
+  </div>
+</Frame>
+
 ## Viewing Logs in Splunk
 
 Once configured, logs will appear in your Splunk instance within a few seconds of being generated.
