--- a/docs/python-sdk/guides/authentication.mdx
+++ b/docs/python-sdk/guides/authentication.mdx
@@ -116,6 +116,7 @@ If you receive a 404 error:
 - Verify your URL is correct and includes the correct environment ID
 - Check that the environment exists in your Elementary Cloud account
 - Ensure you have access to the environment
+- Contact the Elementary team for help
 
 ## Related Documentation
 
