--- a/docs/python-sdk/introduction.mdx
+++ b/docs/python-sdk/introduction.mdx
@@ -32,7 +32,7 @@ The SDK allows you to:
 - **Framework-agnostic** - Works with any Python testing framework (Great Expectations, DQX, custom code)
 - **Decorator-based API** - Simple decorators to define tests (`@boolean_test`, `@expected_range`, etc.)
 - **Context management** - Use `elementary_test_context` to automatically capture test results
-- **Unified observability** - Python tests appear alongside dbt tests and cloud tests in Elementary
+- **Unified observability** - Python tests appear alongside dbt tests and cloud tests in Elementary Cloud
 - **Full lineage** - Connect Python assets to dbt models, warehouse tables, and ML outputs
 
 ## Use Cases
