fixed python sdk docs

--- a/docs/python-sdk/api-reference/table-assets.mdx
+++ b/docs/python-sdk/api-reference/table-assets.mdx
@@ -77,5 +77,5 @@ Table assets are updated on each ingest, so include all current metadata in ever
 
 - [Tests](/python-sdk/api-reference/tests) - Define tests for your table assets
 - [Test Executions](/python-sdk/api-reference/test-executions) - Report test results
-- [Sending Data Guide](/python-sdk/guides/sending-data) - Learn how to send table assets
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
 
