--- a/docs/python-sdk/api-reference/test-decorators.mdx
+++ b/docs/python-sdk/api-reference/test-decorators.mdx
@@ -234,6 +234,6 @@ All decorators support these common parameters:
 ## Related Documentation
 
 - [Quickstart](/python-sdk/quickstart) - Get started with test decorators
-- [Sending Data](/python-sdk/guides/sending-data) - Learn how to send test results
-- [Best Practices](/python-sdk/guides/best-practices) - Best practices for using the SDK
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
+- [Tests](/python-sdk/api-reference/tests) - Understand test definitions
 
