--- a/docs/python-sdk/api-reference/test-executions.mdx
+++ b/docs/python-sdk/api-reference/test-executions.mdx
@@ -152,5 +152,5 @@ Test executions are upserted, so you can send the same execution multiple times 
 
 - [Tests](/python-sdk/api-reference/tests) - Define tests to execute
 - [Table Assets](/python-sdk/api-reference/table-assets) - Create table assets
-- [Sending Data Guide](/python-sdk/guides/sending-data) - Learn how to send test executions
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
 
