--- a/docs/python-sdk/api-reference/tests.mdx
+++ b/docs/python-sdk/api-reference/tests.mdx
@@ -109,5 +109,5 @@ Tests are replaced on each ingest, so include all current test definitions in ev
 
 - [Table Assets](/python-sdk/api-reference/table-assets) - Create table assets to test
 - [Test Executions](/python-sdk/api-reference/test-executions) - Report test execution results
-- [Sending Data Guide](/python-sdk/guides/sending-data) - Learn how to send tests
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
 
