--- a/docs/python-sdk/quickstart.mdx
+++ b/docs/python-sdk/quickstart.mdx
@@ -218,6 +218,6 @@ Once you send test results to Elementary Cloud:
 ## What's Next?
 
 - [API Reference](/python-sdk/api-reference/overview) - Learn about all available objects and methods
-- [Sending Data Guide](/python-sdk/guides/sending-data) - Best practices for sending data
-- [Best Practices](/python-sdk/guides/best-practices) - Tips for using the SDK effectively
+- [Test Decorators](/python-sdk/api-reference/test-decorators) - Complete reference for all test decorators
+- [Table Assets](/python-sdk/api-reference/table-assets) - Learn about table asset structure
 
