--- a/docs/python-sdk/api-reference/table-assets.mdx
+++ b/docs/python-sdk/api-reference/table-assets.mdx
@@ -75,7 +75,6 @@ Table assets are updated on each ingest, so include all current metadata in ever
 
 ## Related Documentation
 
-- [Tests](/python-sdk/api-reference/tests) - Define tests for your table assets
-- [Test Executions](/python-sdk/api-reference/test-executions) - Report test results
+- [Test Decorators](/python-sdk/api-reference/test-decorators) - Define tests for your table assets
 - [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
 
