--- a/docs/python-sdk/api-reference/test-decorators.mdx
+++ b/docs/python-sdk/api-reference/test-decorators.mdx
@@ -235,5 +235,5 @@ All decorators support these common parameters:
 
 - [Quickstart](/python-sdk/quickstart) - Get started with test decorators
 - [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
-- [Tests](/python-sdk/api-reference/tests) - Understand test definitions
+- [Table Assets](/python-sdk/api-reference/table-assets) - Register tables and views in your data warehouse
 
