--- a/docs/python-sdk/api-reference/table-assets.mdx
+++ b/docs/python-sdk/api-reference/table-assets.mdx
@@ -17,7 +17,7 @@ asset = TableAsset(
     description="string",           # Optional: Table description
     owners=["string"],              # Optional: List of owners (emails or usernames)
     tags=["string"],               # Optional: List of tags
-    depends_on=["string"]           # Optional: List of upstream asset IDs
+    depends_on=["string"]           # Optional: List of upstream fully qualified table names
 )
 ```
 
@@ -37,7 +37,7 @@ asset = TableAsset(
 | `description` | string | Human-readable description of the table |
 | `owners` | list[string] | List of owners (email addresses or usernames) |
 | `tags` | list[string] | List of tags for categorization |
-| `depends_on` | list[string] | List of upstream asset IDs (e.g., `["prod.public.customers", "prod.public.orders"]`) for lineage tracking |
+| `depends_on` | list[string] | List of upstream fully qualified table names (e.g., `["prod.public.customers", "prod.public.orders"]`) for lineage tracking |
 
 ## Example
 
@@ -75,7 +75,6 @@ Table assets are updated on each ingest, so include all current metadata in ever
 
 ## Related Documentation
 
-- [Tests](/python-sdk/api-reference/tests) - Define tests for your table assets
-- [Test Executions](/python-sdk/api-reference/test-executions) - Report test results
-- [Sending Data Guide](/python-sdk/guides/sending-data) - Learn how to send table assets
+- [Test Decorators](/python-sdk/api-reference/test-decorators) - Define tests for your table assets
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
 
