--- a/docs/python-sdk/api-reference/test-decorators.mdx
+++ b/docs/python-sdk/api-reference/test-decorators.mdx
@@ -49,8 +49,8 @@ def test_function(df: pd.DataFrame) -> bool:
 | `tags` | list[str] | No | `None` | List of tags |
 | `owners` | list[str] | No | `None` | List of owners |
 | `metadata` | dict | No | `None` | Additional metadata |
-| `quality_dimension` | QualityDimension | No | `None` | Quality dimension (defaults to VALIDITY if column_name is set) |
-| `skip` | bool | No | `False` | Whether to skip this test |
+| `quality_dimension` | QualityDimension | No | `None` | Quality dimension (defaults to VALIDITY) |
+| `skip` | bool | No | `False` | Whether to skip this test. Useful if you want the test to appear in Elementary Cloud, but you don't want to execute it in this run. |
 
 ### Example
 
@@ -68,7 +68,7 @@ def test_unique_ids(df: pd.DataFrame) -> bool:
 
 ## @expected_range
 
-Tests that return a numeric value that should fall within a range.
+Tests that return a numeric value that should fall within a range. They can also return a list of numeric values or a pandas Series.
 
 ### Signature
 
@@ -86,9 +86,11 @@ Tests that return a numeric value that should fall within a range.
     quality_dimension: QualityDimension | None = None,
     skip: bool = False,
 )
-def test_function(df: pd.DataFrame) -> float:
+def test_function(df: pd.DataFrame) -> float | list[float] | pd.Series:
     # Your test logic
-    return 25.5  # Numeric value
+    return df["age"].mean()  # Numeric value
+    # return [1, 2, 3]  # Numeric values
+    # return df["age"]  # pandas Series
 ```
 
 ### Parameters
@@ -98,10 +100,7 @@ def test_function(df: pd.DataFrame) -> float:
 | `name` | str | Yes | - | Test name |
 | `min` | float | No | `None` | Minimum expected value (inclusive) |
 | `max` | float | No | `None` | Maximum expected value (inclusive) |
-| `severity` | str | No | `"ERROR"` | Test severity |
-| `description` | str | No | `None` | Test description |
-| `column_name` | str | No | `None` | Column being tested |
-| `tags`, `owners`, `metadata`, `quality_dimension`, `skip` | - | No | - | Same as `@boolean_test` |
+| `severity`, `description`, `column_name`, `tags`, `owners`, `metadata`, `quality_dimension`, `skip` | - | No | - | Same as `@boolean_test` |
 
 ### Example
 
@@ -120,7 +119,7 @@ def test_average_age(df: pd.DataFrame) -> float:
 
 ## @expected_values
 
-Tests that return a value that should match one of a list of expected values.
+Tests that return a value (or values) that should match one of a list of expected values.
 
 ### Signature
 
@@ -150,10 +149,7 @@ def test_function(df: pd.DataFrame) -> Any:
 | `name` | str | Yes | - | Test name |
 | `expected` | Any \| list[Any] | Yes | - | Expected value(s) - can be single value or list |
 | `allow_none` | bool | No | `False` | Whether to allow None values |
-| `severity` | str | No | `"ERROR"` | Test severity |
-| `description` | str | No | `None` | Test description |
-| `column_name` | str | No | `None` | Column being tested |
-| `tags`, `owners`, `metadata`, `quality_dimension`, `skip` | - | No | - | Same as `@boolean_test` |
+| `severity`, `description`, `column_name`, `tags`, `owners`, `metadata`, `quality_dimension`, `skip` | - | No | - | Same as `@boolean_test` |
 
 ### Example
 
@@ -199,9 +195,7 @@ def test_function(df: pd.DataFrame) -> Sized:
 | `name` | str | Yes | - | Test name |
 | `min` | int | No | `None` | Minimum expected row count (inclusive) |
 | `max` | int | No | `None` | Maximum expected row count (inclusive) |
-| `severity` | str | No | `"ERROR"` | Test severity |
-| `description` | str | No | `None` | Test description |
-| `tags`, `owners`, `metadata`, `skip` | - | No | - | Same as `@boolean_test` |
+| `severity`, `description`, `tags`, `owners`, `metadata`, `skip` | - | No | - | Same as `@boolean_test` |
 
 ### Example
 
@@ -214,7 +208,7 @@ def test_function(df: pd.DataFrame) -> Sized:
     description="Validate user count is within expected range",
 )
 def get_users_df(df: pd.DataFrame) -> pd.DataFrame:
-    """Return the dataframe - decorator calls len() on it."""
+    """Return the DataFrame; the decorator calls len() on it."""
     return df
 ```
 
@@ -240,6 +234,6 @@ All decorators support these common parameters:
 ## Related Documentation
 
 - [Quickstart](/python-sdk/quickstart) - Get started with test decorators
-- [Sending Data](/python-sdk/guides/sending-data) - Learn how to send test results
-- [Best Practices](/python-sdk/guides/best-practices) - Best practices for using the SDK
+- [API Reference](/python-sdk/api-reference/overview) - Overview of the SDK API
+- [Table Assets](/python-sdk/api-reference/table-assets) - Register tables and views in your data warehouse
 
